[tool]
[tool.poetry]
name = "auto_trip_tagging_model_builder"
version = "0.0.0"
description=""
authors=[]

[tool.poetry.dependencies]
python = "==3.7.10"
boto3 = "*"
imbalanced-learn = "*"
numpy = "*"
pandas = "*"
psycopg2-binary = "*"
sklearn = "*"
xgboost = "*"
catboost = "^0.25.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
eli5 = "*"
graphviz = "*"
jupyter = "*"
matplotlib = "*"
mock = "*"
mocker = "*"
pytest = "*"
pytest-mock = "*"
